@@ -7,6 +7,9 @@
 	  support/regression/tests/gcc-torture-execute-2015*.c,
 	  support/regression/tests/gcc-torture-execute-2017*.c:
 	  Port more tests from the GCC testsuite.
+	* src/stm8/gen.c,
+	  support/regression/tests/gcc-torture-execute-20141022-1.c:
+	  Fix bug #2652.
 
 2017-09-25 Philipp Klaus Krause <pkk AT spth.de>
 
